[gd_scene load_steps=2 format=3 uid="uid://bdnx6mlldf6js"]

[ext_resource type="Script" uid="uid://filo816fpjqb" path="res://services/timer_service.gd" id="1_6vd8t"]

[node name="TimerService" type="Node"]
script = ExtResource("1_6vd8t")
short_time = 60.0
medium_time = 120.0
long_time = 180.0
update_interval = 0.2

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="HurryUpTimer" type="Timer" parent="."]
one_shot = true

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
